<resources>
    <string name="app_name">RSPL mSecSales</string>
    <string name="register_support_email">customercare@rspl.net.in</string>
    <string name="register_support_phone">18001202800</string>
    <string name="sync_menu">Sync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_un_plan_adhoc">Adhoc Visit</string>
    <string name="menu_my_targets">My Targets</string>
    <string name="menu_db_stock">DB Stock</string>
    <string name="menu_behaviour">Behavior</string>
    <string name="menu_schemes">Schemes</string>
    <string name="menu_visual_aid">Visual Aid</string>
    <string name="menu_digital_product">Digital Product</string>
    <string name="menu_retailers">Retailers</string>
    <string name="menu_beat_plan">Beat Plan</string>
    <string name="lbl_main_menu">Main Menu</string>
    <string name="preparing_app">Preparing the app. please wait…</string>
    <string name="app_loading">Loading... </string>
    <string name="alert_sync_cannot_be_performed"> Sync cannot be performed due to network unavailability</string>
    <string name="auth_fail_plz_contact_admin">[%1$s] Authentication failed or user locked, Please contact channel team</string>
    <string name="data_conn_lost_during_sync_error_code">[%1$s] Unable to reach server. Please check the data connection and try again</string>
    <string name="techincal_error_plz_contact">[%1$s] Technical error, Please upload log and inform administrator</string>
    <string name="comm_error_server_failed_plz_contact">[%1$s] Communication with server failed with status code 503, Please upload log and inform administrator</string>
    <string name="unknown_error">Unknown error occurred during sync. Please check the log</string>
    <string name="msg_sync_started">Synchronization %1$s started </string>
    <string name="msg_error_sync">%1$s synchronized with errors :  </string>
    <string name="msg_success_sync">%1$s synchronized successfully</string>
    <string name="msg_sync_progress_msg_plz_wait">Synchronization in Progress, Please wait&#8230;</string>
    <string name="msg_success_delete_log">Log deleted successfully</string>
    <string name="msg_success_upload_log">Log uploaded successfully</string>
    <string name="msg_error_upload_log">Error occured while uploading logs to server</string>
    <string name="msg_error_competitor">Error saving competitors</string>
    <string name="so_save_SampleDisbursement_msg">Do you want to save Sample Disbursement?</string>
    <string name="so_save_Merchandisingmsg">Do you want to save Merchandising Snapshot?</string>
    <string name="so_save_RO_msg">Do you want to save Return Order?</string>
    <string name="autodate_change_msg">Automatic Date and Time is not enabled</string>
    <string name="autodate_change_btn">Enable</string>
    <string name="checking_pemission">Checking location permission please wait…</string>
    <string name="error_first_half">Select 1st Half</string>
    <string name="error_second_half">Select 2nd Half</string>
    <string name="error_full_day">Select full day</string>
    <string name="error_att_remarks">Remarks can\'t be empty</string>
    <string name="error_att_remarks_valid">Please enter valid remarks</string>
    <string name="dialog_day_ended">Day ended</string>
    <string name="dialog_day_started">Day started</string>
    <string name="dialog_day_reset">Day end reset done</string>
    <string name="tv_complete">Day Completed</string>
    <string name="tv_end">End Day</string>
    <string name="tv_start">Start Day</string>
    <string name="msg_retailer_error">Show Error List</string>
    <string name="menu_start">Start</string>
    <string name="visit_end_not_marked_for_specific_retailer">Visit end not marked for %1$s . Do you want to mark now?</string>
    <string name="approve_title_comments">Comments</string>
    <string name="visit_error_remarks">Remarks is required</string>
    <string name="tvRemarks">Remarks *</string>
    <string name="tvRemarks_not_mandatory">Remarks</string>
    <string name="save">Save</string>
    <string name="msg_update_end">Updating end, please wait</string>
    <string name="msg_previous_day_end">Please click yes to update the end for previous day</string>
    <string name="msg_update_previous_day_end">Updating previous day end, please wait</string>
    <string name="msg_reset_day_end">Do you want to reset day end?</string>
    <string name="msg_resetting_day_end">Resetting end, please wait</string>
    <string name="msg_confirm_day_end">Do you want to End the Day?</string>
    <string name="msg_remarks_pending_visit">Please fill the remarks for pending retailer visit</string>
    <string name="alert_plz_enter_remarks">Visit end remarks</string>
    <string name="lbl_full_day">Full Day *</string>
    <string name="lbl_second_day">2nd Half *</string>
    <string name="lbl_half_day">1st Half *</string>
    <string name="title_attendance">Attendance</string>
    <string name="msg_marking_attendance">Marking Attendance, please wait</string>
    <string name="err_msg_concat">%1$s : %2$s</string>
    <string name="lbl_attence_start">Attendance start</string>
    <string name="msg_start_upd_sync_error">Start update sync completed with errors</string>
    <string name="msg_end_upd_sync_error">End update sync completed with errors</string>
    <string name="msg_reset_upd_sync_error">Reset update sync completed with errors</string>
    <string name="msg_remarks">Please enter the remarks</string>
    <string name="msg_exit_attendance">Do you want to exit from attendance?</string>
    <string name="alert_please_start_visit">Please start visit</string>
    <string name="visit_started">Visit started</string>
    <string name="visit_ended">Visit ended</string>
    <string name="marking_visit_end_plz_wait">Marking visit end, please wait</string>
    <string name="marking_visit_start_plz_wait">Marking Visit start, please wait</string>
    <string name="summary_title">Summary</string>
    <string name="no_req_to_update_sap">No pending requests to update SAP</string>
    <string name="data_conn_lost_during_upload_log_error_code">[%1$s] Unable to reach server. Please check the data connection and try again</string>
    <string name="data_conn_lost_during_sync">Unable to reach server. Please check the data connection and try again</string>
    <string name="internal_error_during_sync">Internal error occurred during sync, Please try again</string>
    <string name="msg_error_occured_during_sync_except">Synchronization completed successfully except</string>
    <string name="do_want_cancel_sync">Do you want to cancel synchronisation?</string>
    <string name="updating_data_plz_wait">Updating data,Please wait...</string>
    <string name="error_occured_during_post">Error occurred while posting, Please check the log.</string>
    <string name="error_occured_during_save">Error occurred while saving, Please check the log.</string>
    <string name="issue_copied_to_clipboard_send_to_chnnel_team">Issues copied to clipboard.Please send to channel team</string>
    <string name="plz_select_one_coll">Please select atleast one collection.</string>
    <string name="all">All</string>
    <string name="alert_auto_sync_is_progress">Auto sync is in progress.Sync cannot be performed now</string>
    <string name="msg_sync_successfully_completed">Synchronization completed successfully</string>
    <string name="msg_error_occured_during_sync">Synchronization completed with errors</string>
    <string name="msg_sync_terminated">Sync terminated</string>
    <string name="so_filter_manual_selection">Manual Selection</string>
    <string name="so_filter_last_one_month">Last One Month</string>
    <string name="so_filter_last_seven_days">Last Seven Days</string>
    <string name="so_filter_today_and_yesterday">Today and Yesterday</string>
    <string name="so_filter_current_mont">Current Month</string>
    <string name="so_filter_next_mont">Next Month</string>
    <string name="so_filter_today">Today</string>
    <string name="so_filter_any">Any</string>
    <string name="so_list_enter_valid_date">Select Valid Date</string>
    <string name="so_status">Status</string>
    <string name="so_filter_date_">Order date</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="so_filter">SO filter</string>
    <string name="brand_filter">Brand filter</string>
    <string name="menu_apply">Apply</string>
    <string name="lbl_cust_name_search">Search…</string>
    <string name="customers_filter">Business Partners Filter</string>
    <string name="po_last_refreshed">Last refreshed </string>
    <string name="so_order_no">Sales Order #</string>
    <string name="so_order_date">Sales Order Date</string>
    <string name="so_order_value">SO Value</string>
    <string name="lbl_so_doc_num_search">Sales order No. Search</string>
    <string name="so_material_desc">Material Desc</string>
    <string name="order_date">Order Date</string>
    <string name="order_date_start">From Date</string>
    <string name="order_date_end">To Date</string>
    <string name="title_sales_order">SOs</string>
    <string name="lbl_history">History</string>
    <string name="lbl_so_device_order_list">Pending Sync</string>
    <string name="lbl_retailer_list">Retailers</string>
    <string name="lbl_prospected_customer_list">Prospective Customer List</string>
    <string name="lbl_adhoc_list">Adhoc Visit</string>
    <string name="lbl_appointment_list">Appointment List</string>
    <string name="lbl_appointment_create">Appointment Create</string>
    <string name="lbl_retailer_details">Retailer</string>
    <string name="lbl_not_retailer_details">Retailer with error</string>
    <string name="lbl_competitor_list">Competitors</string>
    <string name="lbl_competitor_details">Competitor</string>
    <string name="lbl_prospected_customer">Prospective Customer</string>
    <string name="lbl_beat_paln">Beat Plan</string>
    <string name="lbl_visit">Retailer Visit</string>
    <string name="lbl_merchndising_rivews">Merchandising</string>
    <string name="lbl_merchndising_list">Merchandising</string>
    <string name="lbl_merchndising">Merchandising Snapshot</string>
    <string name="lbl_invoice_create">Create Invoice</string>
    <string name="lbl_so_create">Sales Order Create</string>
    <string name="lbl_so_create_single">Sales Order Create With Single Item</string>
    <string name="str_concat_two_texts_visit_achieved_val">%1$s/%2$s</string>
    <string name="lbl_competitor_mandatory">Competitor Name*</string>
    <string name="lbl_product_mandatory">Product Name*</string>
    <string name="lbl_mrp_mandatory">MRP *</string>
    <string name="lbl_scheme_name_mandatory">Scheme Name *</string>
    <string name="lbl_margin_mandatory">Retailer Margin % *</string>
    <string name="lbl_remarks">Remarks *</string>
    <string name="lbl_scheme_launched">Scheme Launched *</string>
    <string name="lbl_consumer_offer">Consumer Offer</string>
    <string name="lbl_ret_landing_offer">Retailer Landing Rate</string>
    <string name="lbl_whole_landing_offer">Wholesaler Landing Rate</string>
    <string name="lbl_trade_offer">Trade Offer</string>
    <string name="lbl_shelf_lif">Shelf Life</string>
    <string name="lbl_grp_one_mandatory">Group 1 *</string>
    <string name="lbl_grp_two_mandatory">Group 2 *</string>
    <string name="lbl_grp_three_mandatory">Group 3 *</string>
    <string name="lbl_grp_four_mandatory">Group 4 *</string>
    <string name="lbl_grp_five_mandatory">Group 5 *</string>
    <string name="lbl_dms_div_mandatory">DMS Division *</string>
    <string name="lbl_dis_per">Discount Percentage</string>
    <string name="lbl_credit_limit">Credit Limit</string>
    <string name="lbl_credit_period">Credit Period</string>
    <string name="lbl_no_of_bills">Number Of Bills</string>
</resources>