<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackgroundColor">

    <include layout="@layout/appbar_layout" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    style="@style/UtilsItemSpacing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivision"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_dms_div_mandatory"
                        app:ms_multiline="false" />

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivGrpOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_grp_one_mandatory"
                        app:ms_multiline="false" />

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivGrpTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_grp_two_mandatory"
                        app:ms_multiline="false" />

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivGrpThree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_grp_three_mandatory"
                        app:ms_multiline="false" />

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivGrpFour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_grp_four_mandatory"
                        app:ms_multiline="false" />

                    <com.arteriatech.ss.msecsales.rspl.ui.MaterialDesignSpinner
                        android:id="@+id/spDMSDivGrpFive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ms_alwaysShowFloatingLabel="true"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelText="@string/lbl_grp_five_mandatory"
                        app:ms_multiline="false" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiDiscountPercentage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTheme">

                        <EditText
                            android:id="@+id/etDiscountPercentage"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/lbl_dis_per"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiCreditLimit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTheme">

                        <EditText
                            android:id="@+id/etCreditLimit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/lbl_credit_limit"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiCreditPeriod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTheme">

                        <EditText
                            android:id="@+id/etCreditPeriod"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="3"
                            android:hint="@string/lbl_credit_period"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiNoOfBills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditTextTheme">

                        <EditText
                            android:id="@+id/etNoOfBills"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="3"
                            android:hint="@string/lbl_no_of_bills"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>